--- a/categorie1.html
+++ b/categorie1.html
@@ -6,7 +6,7 @@
     </head>
     <body id="maincont">
         <header>
-            <h1 id="headonetitle">Stream & co</h1>
+            <h1 id="headonetitle"><a href="videotheque.html">Accueil</a></h1>
             <nav id="accueil-nav">
                 <ul id="nav1-ul">
                     <li>
