--- a/categorie6.html
+++ b/categorie6.html
@@ -8,7 +8,7 @@
 
 <body id="maincont6">
     <header>
-        <h1 id="headonetitle">Stream & co</h1>
+            <h1 id="headonetitle"><a href="videotheque.html">Accueil</a></h1>
         <nav id="accueil-nav">
             <ul id="nav1-ul">
                 <li>
