--- a/categorie1.html
+++ b/categorie1.html
@@ -33,7 +33,7 @@
                     <h1 id="filmtitle">Fast and Furious : Hobbs and Shaw (2019) <em>HD</em></h1>
                     <div id="paramark">
                         <p><mark>Action</mark></p>
-                        <p id="paramark2"><mark>Tout public</mark></p>
+                        <p id="paramark2"><mark>Tout</mark></p>
                     </div>
                     <div id="div-film">
                         <img id="film" src="img/fast.jpg" alt="">
