--- a/videotheque.html
+++ b/videotheque.html
@@ -20,7 +20,7 @@
         <nav id="accueil-nav1">
             <ul>
                 <li>
-                    <a class="accueil-lien1" href="#"><b>Catégories Films Streaming VF</b></a>
+                    <a class="accueil-lien1" href="#"><b id="big-title" >Catégories Films Streaming VF</b></a>
                     <div class="menu1">
                         <div class="sous-menu1">
                             <ul>
@@ -223,9 +223,9 @@
     </div>
     
     <footer>
-        <section class="sectionfoot">
+        <section>
             <div>
-                <ul id="deroulant">
+                <ul id="deroulant-amine">
                     <li><a href="categorie1.html">Action</a>
                         <ul class="ul1">
                             <li><a href="categorie1.html">Fast and Furious Hobbs and Shaw</a></li>
